# embed

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yml
src/: cosine_similarity.wgsl  main.rs  similarity.rs
